--- a/shelter/pages/our-pets/style2.css
+++ b/shelter/pages/our-pets/style2.css
@@ -614,6 +614,7 @@ main{
   }
   
   .footer_container{
+    margin: 0;
     max-width: 60%;
     padding-top: 20px;
     display: grid;
@@ -738,7 +739,7 @@ a{
   transition: .3s;
 }
 .main_menu{
-  max-width: 708px;
+  max-width: 93.25%;
   /* margin-top: 60px; */
   height: 60px;
   display: flex;
@@ -816,12 +817,13 @@ main{
 }
 
 .pets_wrap{
+  width: 99vw;
   display: flex;
   flex-direction: column;
 }
 
 .pets_title_container{
-  /* width: 400px; */
+  width: 93.25%;
   margin: 0 auto;
   padding-top: 80px;
   padding-bottom: 31px;
@@ -970,21 +972,23 @@ main{
   /*footer*/
 
 .footer{
-  max-width: 768px;
+  max-width: 100vw;
   /*margin: 0 auto;*/
   /*background-image: url(../../assets/images/noise_transparent@2x.png);*/
   background: radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%), url(../../assets/images/noise_transparent@2x.png);
 }
 
 .footer_container{
-  padding-top: 20px;
-  display: grid;
-  grid-template-rows: auto auto;
-  grid-template-columns: repeat(2, 1fr);
+  margin: 0;
+  max-width: 90vw;
+  /* padding-top: 20px; */
+  /* display: grid; */
+  /* grid-template-rows: auto auto; */
+  /* grid-template-columns: repeat(2, 1fr); */
   /* grid-row-end: span2; */
-  grid-row-gap: 76px;
+  /* grid-row-gap: 76px; */
   /* gap: 34px; */
-  grid-column-gap: 33px;
+  /* grid-column-gap: 33px; */
   /* display: flex; */
   /* flex-wrap: wrap; */
 }
@@ -1062,7 +1066,8 @@ main{
 }
 
 .footer_puppy{
-  margin-left: 204px;
+  margin-left: 26.56%;
+  max-width: 300px;
   grid-column: 1/span2;
   background: url(../../assets/images/footer-puppy.png) no-repeat;
 }
